recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:4: error: identifier expected but ')' found.
forwad(100.);
           ^FourSquare:5: error: identifier expected but ')' found.
left(90.);
        ^FourSquare:6: error: identifier expected but ')' found.
forward(100.);
            ^FourSquare:7: error: identifier expected but ')' found.
left(90.);
        ^FourSquare:8: error: identifier expected but ')' found.
forward(200.);
            ^FourSquare:9: error: identifier expected but ')' found.
left(90.);
        ^FourSquare:10: error: identifier expected but ')' found.
forward(200.);
            ^FourSquare:11: error: identifier expected but ')' found.
left(90.);
        ^FourSquare:12: error: identifier expected but ')' found.
forward(200.);
            ^FourSquare:13: error: identifier expected but ')' found.
left(90.);
        ^FourSquare:14: error: identifier expected but ')' found.
forward(100.)
            ^FourSquare:15: error: identifier expected but ')' found.
left(90.)
        ^FourSquare:16: error: identifier expected but ')' found.
forward(200.)
            ^FourSquare:17: error: identifier expected but ')' found.
backward(100.)
             ^FourSquare:19: error: identifier expected but ')' found.
forward(100.)
            ^