recursion.logo.square.FourSquare.scala.code


override def run() {
forwad(100.);
left(90.);
forward(100.);
left(90.);
forward(200.);
left(90.);
forward(200.);
left(90.);
forward(200.);
left(90.);
forward(100.)
left(90.)
forward(200.)
backward(100.)
left(90)
forward(100.)
backward(200)
forward(100)
left(90)}